README.md completed
